# Bug_explainer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: api.py  streamlit_app.py
configs/: train_config.yaml
data/: errors.json
notebooks/: bugfix_original.ipynb
scripts/: merge.sh  run_api.sh  train.sh
src/bug_explainer/: config.py  data.py  infer.py  merge.py  train.py
tests/: test_data.py  test_pipeline.py
