[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-explainer"
version = "0.1.0"
description = "Fine-tune TinyLlama to explain programming errors to beginners."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
